--- a/src/index.html
+++ b/src/index.html
@@ -1,222 +1,224 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Scientific Calculator</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+    <style>
+        .rounded-start {
+            border-top-left-radius: 50px !important;
+            border-bottom-left-radius: 50px !important;
+        }
 
-  <body>
+        .rounded-end {
+            border-top-right-radius: 50px !important;
+            border-bottom-right-radius: 50px !important;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container">
-      <h1 class="mt-3 text-center">Scientific Calculator</h1>
-      <div class="row">
-        <div class="col-12 offset-md-3 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <input
-                id="calc-display"
-                readonly
-                class="form-control form-control-lg text-end"
-                type="text"
-                aria-label=".form-control-lg example"
-              />
-              <!-- ROW 1 -->
-              <div class="row gx-1">
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    (
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    )
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    %
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    AC
-                  </button>
-                </div>
+        <h1 class="mt-3 text-center">Scientific Calculator</h1>
+        <div class="row">
+            <div class="col-12 offset-md-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <input id="calc-display" readonly class="form-control form-control-lg text-end" type="text"
+                            aria-label=".form-control-lg example" />
+                        <!-- ROW 1 -->
+                        <div class="row gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-secondary w-100 mt-2 border">
+                                    (
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    )
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    %
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    AC
+                                </button>
+                            </div>
 
-                <!-- ROW 2 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    7
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    8
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    9
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    ÷
-                  </button>
-                </div>
+                            <!-- ROW 2 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    7
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    8
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    9
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    ÷
+                                </button>
+                            </div>
 
-                <!-- ROW 3 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    4
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    5
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    6
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    ×
-                  </button>
-                </div>
+                            <!-- ROW 3 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    4
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    5
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    6
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    ×
+                                </button>
+                            </div>
 
-                <!-- ROW 4 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    1
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    2
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    3
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    -
-                  </button>
-                </div>
+                            <!-- ROW 4 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    1
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    2
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    3
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    -
+                                </button>
+                            </div>
 
-                <!-- ROW 5 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    0
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    .
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button
-                    type="button"
-                    class="btn btn-primary w-100 mt-2 border border-primary"
-                  >
-                    =
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    +
-                  </button>
-                </div>
+                            <!-- ROW 5 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    0
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    .
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
+                                    =
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    +
+                                </button>
+                            </div>
 
-                <!-- ROW 6 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    sin
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    ln
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    π
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    cos
-                  </button>
-                </div>
+                            <!-- ROW 6 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    sin
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    ln
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    π
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    cos
+                                </button>
+                            </div>
 
-                <!-- ROW 7 -->
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    log
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    e
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    tan
-                  </button>
-                </div>
-                <div class="col-3">
-                  <button type="button" class="btn btn-light w-100 mt-2 border">
-                    √
-                  </button>
-                </div>
+                            <!-- ROW 7 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    log
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    e
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    tan
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    √
+                                </button>
+                            </div>
 
-                <!-- ROW 8 -->
-                <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">
-                      Ans
-                    </button>
-                  </div>
-                  <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">
-                      EXP
-                    </button>
-                  </div>
-                  <div class="col-3">
-                    <button type="button" class="btn btn-light w-100 mt-2 border">
-                        <span></span>x</span><sup>y</sup>
-                    </button>
-                  </div>
-                  <div class="col-3">
-                    <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
-                    =
-                    </button>
-                  </div>
-
-              </div>
+                            <!-- ROW 8 -->
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    Ans
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    EXP
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">
+                                    <span></span>x</span><sup>y</sup>
+                                </button>
+                            </div>
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">
+                                    =
+                                </button>
+                            </div>
+                            <div class="col-3 btn-group mt-3" role="group">
+                                <button type="button" class="btn btn-primary rounded-start">123</button>
+                                <button type="button" class="btn btn-primary rounded-end">Fx</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
